--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,3 @@
-BASE_URL=https://api.themoviedb.org/3
-API_KEY=YOUR_API_KEY
+REACT_APP_BASE_URL=https://api.themoviedb.org/3
+REACT_APP_API_KEY=YOUR_API_KEY
 REACT_APP_IMAGE_URL=https://image.tmdb.org/t/p/
